// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details reducer should set the available 1`] = `
Object {
  "available": 20,
  "currencyDecimalPoint": ".",
  "currencyNumberOfDecimals": 2,
  "currencyPosition": "prefix",
  "currencySymbol": undefined,
  "currencyThousandsSep": ",",
  "details": Object {
    "attendeeInfoFields": Array [],
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "hasAttendeeInfoFields": false,
  "hasBeenCreated": false,
  "hasChanges": false,
  "hasDurationError": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSelected": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the currency position 1`] = `
Object {
  "available": 0,
  "currencyDecimalPoint": ".",
  "currencyNumberOfDecimals": 2,
  "currencyPosition": "postfix",
  "currencySymbol": undefined,
  "currencyThousandsSep": ",",
  "details": Object {
    "attendeeInfoFields": Array [],
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "hasAttendeeInfoFields": false,
  "hasBeenCreated": false,
  "hasChanges": false,
  "hasDurationError": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSelected": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the currency symbol 1`] = `
Object {
  "available": 0,
  "currencyDecimalPoint": ".",
  "currencyNumberOfDecimals": 2,
  "currencyPosition": "prefix",
  "currencySymbol": "$",
  "currencyThousandsSep": ",",
  "details": Object {
    "attendeeInfoFields": Array [],
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "hasAttendeeInfoFields": false,
  "hasBeenCreated": false,
  "hasChanges": false,
  "hasDurationError": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSelected": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the has attendee info fields 1`] = `
Object {
  "available": 0,
  "currencyDecimalPoint": ".",
  "currencyNumberOfDecimals": 2,
  "currencyPosition": "prefix",
  "currencySymbol": undefined,
  "currencyThousandsSep": ",",
  "details": Object {
    "attendeeInfoFields": Array [],
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "hasAttendeeInfoFields": true,
  "hasBeenCreated": false,
  "hasChanges": false,
  "hasDurationError": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSelected": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the has been created 1`] = `
Object {
  "available": 0,
  "currencyDecimalPoint": ".",
  "currencyNumberOfDecimals": 2,
  "currencyPosition": "prefix",
  "currencySymbol": undefined,
  "currencyThousandsSep": ",",
  "details": Object {
    "attendeeInfoFields": Array [],
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "hasAttendeeInfoFields": false,
  "hasBeenCreated": true,
  "hasChanges": false,
  "hasDurationError": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSelected": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the has changes 1`] = `
Object {
  "available": 0,
  "currencyDecimalPoint": ".",
  "currencyNumberOfDecimals": 2,
  "currencyPosition": "prefix",
  "currencySymbol": undefined,
  "currencyThousandsSep": ",",
  "details": Object {
    "attendeeInfoFields": Array [],
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "hasAttendeeInfoFields": false,
  "hasBeenCreated": false,
  "hasChanges": true,
  "hasDurationError": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSelected": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the has duration error 1`] = `
Object {
  "available": 0,
  "currencyDecimalPoint": ".",
  "currencyNumberOfDecimals": 2,
  "currencyPosition": "prefix",
  "currencySymbol": undefined,
  "currencyThousandsSep": ",",
  "details": Object {
    "attendeeInfoFields": Array [],
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "hasAttendeeInfoFields": false,
  "hasBeenCreated": false,
  "hasChanges": false,
  "hasDurationError": true,
  "isLoading": false,
  "isModalOpen": false,
  "isSelected": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the is loading 1`] = `
Object {
  "available": 0,
  "currencyDecimalPoint": ".",
  "currencyNumberOfDecimals": 2,
  "currencyPosition": "prefix",
  "currencySymbol": undefined,
  "currencyThousandsSep": ",",
  "details": Object {
    "attendeeInfoFields": Array [],
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "hasAttendeeInfoFields": false,
  "hasBeenCreated": false,
  "hasChanges": false,
  "hasDurationError": false,
  "isLoading": true,
  "isModalOpen": false,
  "isSelected": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the is modal open 1`] = `
Object {
  "available": 0,
  "currencyDecimalPoint": ".",
  "currencyNumberOfDecimals": 2,
  "currencyPosition": "prefix",
  "currencySymbol": undefined,
  "currencyThousandsSep": ",",
  "details": Object {
    "attendeeInfoFields": Array [],
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "hasAttendeeInfoFields": false,
  "hasBeenCreated": false,
  "hasChanges": false,
  "hasDurationError": false,
  "isLoading": false,
  "isModalOpen": true,
  "isSelected": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the is selected 1`] = `
Object {
  "available": 0,
  "currencyDecimalPoint": ".",
  "currencyNumberOfDecimals": 2,
  "currencyPosition": "prefix",
  "currencySymbol": undefined,
  "currencyThousandsSep": ",",
  "details": Object {
    "attendeeInfoFields": Array [],
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "hasAttendeeInfoFields": false,
  "hasBeenCreated": false,
  "hasChanges": false,
  "hasDurationError": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSelected": true,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the provider 1`] = `
Object {
  "available": 0,
  "currencyDecimalPoint": ".",
  "currencyNumberOfDecimals": 2,
  "currencyPosition": "prefix",
  "currencySymbol": undefined,
  "currencyThousandsSep": ",",
  "details": Object {
    "attendeeInfoFields": Array [],
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "hasAttendeeInfoFields": false,
  "hasBeenCreated": false,
  "hasChanges": false,
  "hasDurationError": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSelected": false,
  "provider": "provider",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the sold 1`] = `
Object {
  "available": 0,
  "currencyDecimalPoint": ".",
  "currencyNumberOfDecimals": 2,
  "currencyPosition": "prefix",
  "currencySymbol": undefined,
  "currencyThousandsSep": ",",
  "details": Object {
    "attendeeInfoFields": Array [],
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "hasAttendeeInfoFields": false,
  "hasBeenCreated": false,
  "hasChanges": false,
  "hasDurationError": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSelected": false,
  "provider": "",
  "sold": 20,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the ticket id 1`] = `
Object {
  "available": 0,
  "currencyDecimalPoint": ".",
  "currencyNumberOfDecimals": 2,
  "currencyPosition": "prefix",
  "currencySymbol": undefined,
  "currencyThousandsSep": ",",
  "details": Object {
    "attendeeInfoFields": Array [],
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "hasAttendeeInfoFields": false,
  "hasBeenCreated": false,
  "hasChanges": false,
  "hasDurationError": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSelected": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "unlimited",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "July 19, 2019",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "iac": "none",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "ticketId": 1094,
}
`;
